<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.LoginFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@color/cool_black"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_margin="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#616161"
            tools:ignore="VisualLintTextFieldSize"
            android:textColor="@color/cool_black"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_margin="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#616161"
            tools:ignore="VisualLintTextFieldSize"
            android:textColor="@color/cool_black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_margin="8dp"
        android:textColor="@color/quantum_grey200"
        android:background="@drawable/rounded_button_red"
        />

    <Button
        android:id="@+id/login_to_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_signup"
        android:layout_marginTop="4sp"
        android:padding="8sp"
        android:textColor="@color/quantum_grey200"
        android:background="@drawable/rounded_button_red"
        />



</LinearLayout>