<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.RequestSlot.SlotDetailsActivity"
    android:background="@color/cool_black">

    <!-- Title: Slot Details -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/slot_details"
        android:textSize="32sp"
        android:textStyle="bold"
        android:fontFamily="@font/abril_fatface"
        android:layout_marginBottom="22sp"
        android:textColor="@color/colorPrimary"/>

    <!-- Address Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Address Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address:"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/blue"/>

        <!-- Address Box with Shadow -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="30sp"
            android:layout_weight="2"
            android:elevation="8sp"
            android:layout_marginStart="10sp"
            android:layout_marginBottom="16sp"
            app:cardCornerRadius="8dp"
            android:backgroundTint="@color/quantum_teal400">

            <TextView
                android:id="@+id/slot_address_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/move_bold"
                android:text="New market"
                android:textColor="@color/quantum_grey900"
                android:textSize="18sp"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- Address Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Address Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Owner:    "
            android:textSize="19sp"
            android:textColor="@color/blue"
            android:textStyle="bold"/>

        <!-- Address Box with Shadow -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="30sp"
            android:layout_weight="2"
            android:elevation="8sp"
            android:layout_marginStart="7sp"
            android:layout_marginBottom="16sp"
            app:cardCornerRadius="8dp"
            android:backgroundTint="@color/quantum_teal400">

            <TextView
                android:id="@+id/slot_owner_name_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/move_bold"
                android:text="user 1"
                android:textColor="@color/quantum_grey900"
                android:textSize="18sp"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Address Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Distance:"
            android:textSize="19sp"
            android:textColor="@color/blue"
            android:textStyle="bold"/>

        <!-- Address Box with Shadow -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="30sp"
            android:layout_weight="2"
            android:elevation="8sp"
            android:layout_marginStart="7sp"
            android:layout_marginBottom="16sp"
            android:backgroundTint="@color/quantum_teal400"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/slot_distance_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/move_bold"
                android:text="2 km"
                android:textColor="@color/quantum_grey900"
                android:textSize="18sp"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- Address Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Address Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Price:      "
            android:textSize="19sp"
            android:textColor="@color/blue"
            android:textStyle="bold"/>

        <!-- Address Box with Shadow -->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="30sp"
            android:layout_weight="2"
            android:elevation="8sp"
            android:layout_marginStart="9sp"
            android:layout_marginBottom="16sp"
            android:backgroundTint="@color/quantum_teal400"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/slot_price_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:fontFamily="@font/move_bold"
                android:text="BDT 200"
                android:textColor="@color/quantum_grey900"
                android:textSize="18sp"/>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- Additional Address Sections (Repeat as needed) -->

    <!-- Security Measures -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security_measures"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="6sp"/>

    <!-- Security Measures Boxes -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp">

        <!-- Guard Box -->
        <androidx.cardview.widget.CardView
            android:id="@+id/slot_security_guard_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="4dp"
            android:layout_marginBottom="4sp"
            app:cardBackgroundColor="@android:color/white">

            <TextView
                android:layout_width="72sp"
                android:layout_height="wrap_content"
                android:text="@string/guard"
                android:textSize="16sp"
                android:fontFamily="@font/move_bold"
                android:textAlignment="center"
                android:padding="4dp"
                android:textColor="@color/quantum_grey900"
                />
        </androidx.cardview.widget.CardView>

        <!-- Indoor Box (set to true) -->
        <androidx.cardview.widget.CardView
            android:id="@+id/slot_security_indoor_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="4dp"
            android:layout_marginBottom="4sp"
            app:cardBackgroundColor="@android:color/white"
            > <!-- Light blue for true -->

            <TextView
                android:layout_width="72sp"
                android:layout_height="wrap_content"
                android:text="@string/indoor"
                android:textSize="16sp"
                android:fontFamily="@font/move_bold"
                android:textAlignment="center"
                android:textColor="@color/quantum_grey900"
                android:padding="4dp"/>
        </androidx.cardview.widget.CardView>

        <!-- CCTV Box (set to true) -->
        <androidx.cardview.widget.CardView
            android:id="@+id/slot_security_cctv_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            app:cardCornerRadius="4dp"
            android:layout_marginBottom="4sp"
            app:cardBackgroundColor="@android:color/white"
            > <!-- Light blue for true -->

            <TextView
                android:layout_width="72sp"
                android:layout_height="wrap_content"
                android:text="@string/cctv"
                android:textSize="15sp"
                android:textAlignment="center"
                android:fontFamily="@font/move_bold"
                android:textColor="@color/quantum_grey900"
                android:padding="4dp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- Dimensions -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dimensions"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginTop="12sp"
        android:textColor="#f4143c"
        />

    <!-- Dimensions Boxes (Repeat as needed) -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="20sp"
        android:gravity="center_vertical"
        android:padding="5dp">

        <!-- Guard Box -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Length:"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:layout_marginStart="6sp"
            android:layout_marginEnd="12dp"
            app:cardCornerRadius="4dp"
            android:backgroundTint="@color/quantum_orange">

            <TextView
                android:id="@+id/slot_length_textview"
                android:layout_width="58sp"
                android:layout_height="wrap_content"
                android:text="200m"
                android:textSize="16sp"
                android:textColor="@color/quantum_grey900"
                android:textAlignment="center"
                android:padding="4dp"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Width:"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:textStyle="bold"/>

        <!-- Indoor Box (set to true) -->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:layout_marginStart="6sp"
            android:layout_marginEnd="12dp"
            app:cardCornerRadius="4dp"
            android:backgroundTint="@color/quantum_orange">

            <TextView
                android:id="@+id/slot_width_textview"
                android:layout_width="58sp"
                android:layout_height="wrap_content"
                android:text="200m"
                android:textSize="16sp"
                android:textColor="@color/quantum_grey900"
                android:textAlignment="center"
                android:padding="4dp"/>
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Height:"
            android:textSize="16sp"
            android:textColor="@color/blue"
            android:textStyle="bold"/>
        <!-- CCTV Box (set to true) -->
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:layout_marginStart="6sp"
            app:cardCornerRadius="4dp"
            android:backgroundTint="@color/quantum_orange"
            >

            <TextView
                android:id="@+id/slot_height_textview"
                android:layout_width="58sp"
                android:layout_height="wrap_content"
                android:text="200m"
                android:textSize="16sp"
                android:textColor="@color/quantum_grey900"
                android:textAlignment="center"
                android:padding="4dp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <!-- Address Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20sp">

        <!-- Address Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rating:    "
            android:textSize="19sp"
            android:textColor="@color/blue"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:layout_marginStart="6sp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/quantum_orange"
            app:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/slot_rating_textview"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:text="4.5"
                android:textSize="16sp"
                android:fontFamily="@font/move_bold"
                android:textColor="@color/quantum_grey900"
                android:textAlignment="center"
                android:padding="4dp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Address Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Bookings: "
            android:textSize="19sp"
            android:textColor="@color/blue"
            android:textStyle="bold"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:layout_marginStart="6sp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/quantum_orange"
            app:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/slot_total_book_textview"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:text="20"
                android:textSize="16sp"
                android:fontFamily="@font/move_bold"
                android:textColor="@color/quantum_grey900"
                android:textAlignment="center"
                android:padding="4dp"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/book_slot_button"
        android:text="Book Slot"
        android:layout_marginTop="24sp"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:layout_gravity="center"
        android:fontFamily="@font/move_bold"
        android:backgroundTint="@color/blue"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"/>

</LinearLayout>
